--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -2,14 +2,14 @@
 
 .layout {
   &__header {
-      
+    padding: 0 1rem;
   }
-
   &__main {
-  
+    margin-bottom: 1rem;
+    padding: 0 1rem;
   }
-
   &__footer {
-
+    padding: 1rem;
+    border-top: 1px solid #333;
   }
 }
