--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  display: flex;
   padding: 0 2rem;
 }
 
@@ -119,4 +120,10 @@
   display: flex;
   justify-content: space-around;
   list-style: none;
+}
+
+.menuList {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
