--- a/components/categoryNav.module.scss
+++ b/components/categoryNav.module.scss
@@ -5,11 +5,12 @@
 	padding: 1rem 0;
 	width: 100%;
 	height: 100%;
+	color: #663;
 }
 
 .catLink:hover,
 .catLink:focus,
 .catLink:active {
   background-color: lightgrey;
-  border: thin solid black;
+  border: thin solid #663;
 }
