--- a/components/admin/Button.module.scss
+++ b/components/admin/Button.module.scss
@@ -1,11 +1,19 @@
 @import '../../styles/config';
 .button {
-  border: 1px solid #fff;
-  border-radius: 8px;
-  padding: 0.5rem;
-  transition: background-color ease-in 200ms, color ease-in 200ms;
-
-  &:hover {
-    color: var(--color-white);
+    background-color: var(--color-accent);
+    border: 1px solid #fff;
+    border-radius: 8px;
+    max-width: 300px;
+    padding: 0.7rem;
+    transition: background-color ease-in 200ms, color ease-in 200ms;
+    margin: 0.2rem 1rem;
+ 
+    a{
+      text-decoration: none;
+      font-size: 16px;
+    }
+    &:hover {
+      background-color: var(--color-accent-dark);
+      color: var(--color-white);
+    }
   }
-}
