menu admin layout
villur ef add menu er ekki fullnægjandi

--- a/components/form/Button.module.scss
+++ b/components/form/Button.module.scss
@@ -10,7 +10,8 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  margin: auto;
+  // margin: auto;
+  margin-top: 1rem;
 
   &:hover {
     background-color: var(--color-accent-dark);
