smá layout breytingar

--- a/components/admin/menu/Layout.module.scss
+++ b/components/admin/menu/Layout.module.scss
@@ -14,10 +14,29 @@
             max-width: 500px;
             display: flex;
             flex-direction: row;
-            &__delete{
+            &__delete {
                 margin: 1rem;
                 align-self:center;
           
+            }
+            &__form{
+                display: flex;
+                flex-direction: column;
+
+                label {
+                    font-size: 1rem;
+                  }
+                select{
+                    border: 1px solid var(--color-accent);
+                    border-radius: 3px;
+                    background-color: #fff;
+                    flex: 1;
+                    padding: 8px;
+                    width: 100%;
+                }
+                label{
+                    margin-top: 1rem;
+                }
             }
         }
         &__pagebutton{
